[package]
name = "biodiff"
description = "Compare binary files using sequence alignment"
repository = "https://github.com/8051Enthusiast/biodiff"
version = "1.2.1"
authors = ["8051Enthusiast <8051Enthusiast@protonmail.com>"]
edition = "2021"
license = "MIT"
default-run = "biodiff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"hexagex",
	"biodiff-wfa2-sys",
]

[features]
default = ["bundle-wfa2"]
bundle-wfa2 = ["biodiff-wfa2-sys/bundle-wfa2", "wfa2"]
wfa2 = ["dep:biodiff-wfa2-sys"]

[dev-dependencies]
trycmd = "0.15.4"

[dependencies]
bio = "2.0.0"
crossterm = "0.27.0"
cursive_buffered_backend = "0.6.1"
unicode-width = "0.1.13"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
dirs = "5.0.1"
regex = "1.10.5"
hexagex = { path = "hexagex", version = "0.2.3" }
realfft = "3.3.0"

[dependencies.clap]
version = "4.5.8"
default-features = false
features = ["color", "help", "usage", "std", "derive"]

[dependencies.biodiff-wfa2-sys]
path = "biodiff-wfa2-sys"
version = "2.3.5"
default-features = false
optional = true

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]

[profile.dev.package.bio]
opt-level = 3

[profile.dist]
inherits = "release"
lto = true
strip = false
codegen-units = 1
opt-level = 3
debug = false
incremental = false
panic = "abort"
overflow-checks = false
